<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">AAD</string>
    <string name="main_toolbar_title" translation_description="Title for the 'Main' screen where user can see the different tabs">AA Certification</string>
    <string name="tab_title_android_core" translatable="false">CORE</string>
    <string name="tab_title_user_interface" translatable="false">UI</string>
    <string name="tab_title_data_management" translatable="false">DATA</string>
    <string name="tab_title_debugging" translatable="false">DEBUG</string>
    <string name="tab_title_testing" translatable="false">TEST</string>
    <string name="label_header_codelabs" translation_description="">CodeLabs</string>
    <string name="generic_label_undo" translation_description="">UNDO</string>
    <string name="generic_label_reset" translation_description="">RESET</string>
    <string name="generic_label_delete" translation_description="">DELETE</string>
    <string name="generic_label_save" translation_description="">SAVE</string>
    <string name="generic_label_start" translation_description="">Start</string>
    <string name="generic_label_stop" translation_description="">Stop</string>
    <string name="generic_label_reply" translation_description="">Reply</string>
    <string name="generic_do_something_message" translation_description="">Do something</string>
    <string name="activity_restarted_message" translation_description="">Activity restarted</string>
    <string name="dialog_label_ok" translation_description="">Ok</string>
    <string name="dialog_label_cancel" translation_description="">Cancel</string>
    <string name="label_test_button" translation_description="">Test Button</string>
    <string name="label_return" translation_description="">Return</string>
    <string name="label_login" translation_description="">Login</string>
    <string name="label_continue" translation_description="">Continue</string>
    <string name="label_generic_search" translation_description="">Search</string>
    <string name="android_core_header_label" translation_description="">Core</string>
    <string name="android_ui_header_label" translation_description="">User Interface</string>
    <string name="android_data_header_label" translation_description="">Data Management</string>
    <string name="android_debugging_header_label" translation_description="">Debugging</string>
    <string name="android_test_header_label" translation_description="">Test</string>
    <string name="label_toast_screen_title" translation_description="">Toast Message Codelab</string>
    <string name="label_button_normal_toast_message" translation_description="">Normal Toast Message</string>
    <string name="label_button_positioning_toast_message" translation_description="">Positioning Toast Message</string>
    <string name="label_button_custom_toast_message" translation_description="">Custom Toast Message</string>
    <string name="label_toast_message" translation_description="">Toast Message</string>
    <string name="toast_simple_message" translation_description="">My Simple Toast Message</string>
    <string name="toast_over_here_message" translation_description="">Over Here!</string>
    <string name="toast_custom_message" translation_description="">This is a custom toast</string>
    <string name="label_snack_bar" translation_description="">Snackbar</string>
    <string name="label_snack_bar_screen_title" translation_description="">Snackbar Codelab</string>
    <string name="label_button_normal_snack_bar" translation_description="">Default Snackbar</string>
    <string name="label_button_action_call_snack_bar" translation_description="">Action call Snackbar</string>
    <string name="label_button_custom_view_snack_bar" translation_description="">Custom view Snackbar</string>
    <string name="snack_bar_simple_message" translation_description="">Default Snackbar</string>
    <string name="snack_bar_delete_dummy" translation_description="">Message is Deleted</string>
    <string name="snack_bar_restore_dummy" translation_description="">Message is restored</string>
    <string name="snack_bar_custom_message" translation_description="">Custom Snackbar</string>
    <string name="localization_screen_title" translation_description="">Localization Codelab</string>
    <string name="label_locale_language" translation_description="">Locale language:
        <xliff:g id="def_language">%s</xliff:g>
    </string>
    <string name="label_localization_card" translation_description="">Localize your app</string>
    <string name="label_locale_date" translation_description="">Date: %s</string>
    <string name="label_language_english_button" translation_description="">Language English</string>
    <string name="label_language_spanish_button" translation_description="">Language Spanish</string>
    <string name="label_activity_codelab" translation_description="">Activity Codelab</string>
    <string name="label_activity_card" translation_description="">Activity Component</string>
    <string name="label_button_start_activity_contact" translation_description="">Start Activity For Result - Contact</string>
    <string name="label_button_start_activity_image" translation_description="">Start Activity For Result - Image</string>
    <string name="label_launch_calendar_button" translation_description="">Launch Calendar</string>
    <string name="label_save_preferences" translation_description="">Save preferences</string>
    <string name="intent_filter_screen_label" translation_description="">Intent Filter Example</string>
    <string name="label_intent_filter_text_view" translation_description="">Intent Filte name: SEND, category: DEFAULT, data: */*</string>
    <string name="label_send_email_with_explicit_activity" translation_description="">Send With Gmail</string>
    <string name="label_send_email_implicit_activity" translation_description="">Send Email</string>
    <string name="dialog_label_selected_date" translation_description="">Selected Date</string>
    <string name="label_custom_activity_for_result" translation_description="">Open Option List</string>
    <string name="label_option_4" translation_description="">Option 4</string>
    <string name="label_option_3" translation_description="">Option 3</string>
    <string name="label_option_2" translation_description="">Option 2</string>
    <string name="label_option_1" translation_description="">Option 1</string>
    <string name="label_cancel_button" translation_description="">Cancel</string>
    <string name="label_select_button" translation_description="">Select</string>
    <string name="label_test_intent" translation_description="">Test Intent</string>
    <string name="label_service_card" translation_description="">Services</string>
    <string name="service_screen_title" translation_description="">Services</string>
    <string name="service_description" translation_description="">This is a example description for the ExampleService</string>
    <string name="intent_service_description" translation_description="">This is a example description for the ExampleIntentService</string>
    <string name="header_simple_runnable" translation_description="">This is a simple Runnable</string>
    <string name="body_simple_runnable" translation_description="">Simple Example of Runnable Class. Runnable sleep for 5 seconds in the background. Runnable is working in its oun UI thread. Main UI Thread is not blocked by the Runnable. Runnable class is launched when the activity start and from Launch Runnable button, Test Button is just to demonstrate that main UI is not blocked. Check the Log to validate behavior.</string>
    <string name="label_threads_running" translation_description="">Running&#8230;</string>
    <string name="label_thread_recursive_example" translation_description="">Recursive Runnable Class</string>
    <string name="label_thread_simple_runnable" translation_description="">Simple Runnable Class</string>
    <string name="label_thread_pool_example" translation_description="">Thread Pool Class</string>
    <string name="label_thread_async_task" translation_description="">Async Task Class</string>
    <string name="label_thread_loader_class" translation_description="">Loader Class</string>
    <string name="label_thread_job_scheduler" translation_description="">Job Scheduler Class</string>
    <string name="label_basic_notification" translation_description="">Basic Notification</string>
    <string name="label_expandable_notification" translation_description="">Expandable Notification</string>
    <string name="label_intent_notification" translation_description="">Intent Notification</string>
    <string name="label_reply_notification" translation_description="">Reply Notification</string>
    <string name="progress_bar_notification" translation_description="">Progress bar Notification</string>
    <string name="infinite_progress_bar" translation_description="">Infinite Progress bar</string>
    <string name="message_style_notification" translation_description="">Message Style Notification</string>
    <string name="media_type_notification" translation_description="">Media Type Notification</string>
    <string name="high_priority_notification" translation_description="">High priority notification</string>
    <string name="task_stack_notification" translation_description="">Task Stack Notification</string>
    <string name="empty_task_stack_notification" translation_description="">Empty Task Stack Notification</string>
    <string name="group_notification_label" translation_description="">Group Notification</string>
    <string name="notification_settings" translation_description="">Redirect to Notification Settings</string>
    <string name="simple_worker_label" translation_description="">Simple Worker</string>
    <string name="simple_constraint_worker_label" translation_description="">Simple Constraint Worker</string>
    <string name="worker_with_work_data_label" translation_description="">Worker With Work Data</string>
    <string name="observe_worker_label" translation_description="">Observe Worker</string>
    <string name="progress_worker_label" translation_description="">Progress Worker</string>
    <string name="chain_workers_label" translation_description="">Chain Workers</string>
    <string name="periodic_work_label" translation_description="">Periodic Work</string>
    <string name="threading_in_work_manager_label" translation_description="">Threading in Work Manager</string>
    <string name="label_basic_arrange">Basic Arrange</string>
    <string name="label_button">Button</string>
    <string name="label_button_2">Button 2</string>
    <string name="label_button_3">Button 3</string>
    <string name="label_button_4">Button 4</string>
    <string name="label_button_5">Button 5</string>
    <string name="label_button_6">Button 6</string>
    <string name="label_button_7">Button 7</string>
    <string name="label_button_8">Button 8</string>
    <string name="label_zeros">0.0</string>
    <string name="label_number_8">8</string>
    <string name="label_number_7">7</string>
    <string name="label_number_9">9</string>
    <string name="label_number_4">4</string>
    <string name="label_number_5">5</string>
    <string name="label_number_3">3</string>
    <string name="label_number_6">6</string>
    <string name="label_number_1">1</string>
    <string name="label_number_2">2</string>
    <string name="label_number_0">0</string>
    <string name="label_dot">.</string>
    <string name="label_advance_chains">Advance Chains</string>
    <string name="label_symbol_plus">+</string>
    <string name="label_symbol_minus">-</string>
    <string name="label_division">/</string>
    <string name="label_symbol_equal">=</string>
    <string name="label_symbol_times">*</string>
</resources>