<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickHandler"
            type="com.angopa.aad.codelabs.fundamentals.workmanager.DashboardFragment.OnClickHandlerListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.simpleWorkRequest()}"
                android:text="@string/simple_worker_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.simpleConstraintWorkRequest()}"
                android:text="@string/simple_constraint_worker_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.workRequestWithWorkData()}"
                android:text="@string/worker_with_work_data_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.workerObserved()}"
                android:text="@string/observe_worker_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.intermediateWorkerProgress()}"
                android:text="@string/progress_worker_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.chainingWorkers()}"
                android:text="@string/chain_workers_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.simpleRecurringWork()}"
                android:text="@string/periodic_work_label" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.threadInWorkManager()}"
                android:text="@string/threading_in_work_manager_label" />

            <Button
                android:id="@+id/blur_o_matic_codelab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> clickHandler.blurOMaticCodelab()}"
                android:text="Blur-O-Matic" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>